Fix html and put in filler

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<<<<<<< HEAD
-Hello World
-=======
 <!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>I'm Louis Cruz</h1>
+<p>Something important might go here someday.</p>
 </body>
 </html>
->>>>>>> 8b1cad1bc20ed8984394a6ef386c302b914a90b8
