--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,100italic,100,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <h1>I'm Louis Cruz</h1>
