--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,100italic,100,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<header>
 <h1>I'm Louis Cruz</h1>
-<p>Something important might go here someday.</p>
+</header>
+I am a Ruby on Rails developer with experience in HTML5/CSS3, JavaScript, PHP, and various content management systems.
 </body>
 </html>
