--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <header>
     <h1>I'm Louis Cruz</h1>
   </header>
+  <div class="rounded white-bg">
     I am a Ruby on Rails developer with experience in HTML5/CSS3, JavaScript, PHP, and various content management systems.
+  </div>
   </body>
 </html>
