--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,100italic,100,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
   <header>
     <h1>I'm Louis Cruz</h1>
   </header>
-  <div class="rounded white-bg">
-    I am a Ruby on Rails developer with experience in HTML5/CSS3, JavaScript, PHP, and various content management systems.
+  <div id="container">
+    <div class="rounded white-bg">
+      I am a Ruby on Rails developer with experience in HTML5/CSS3, JavaScript, PHP, and various content management systems.
+    </div>
   </div>
-  </body>
+</body>
 </html>
