--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -4,14 +4,23 @@
 <head>
   <title>Pitch Pipe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,100italic,100,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <header>
-    Pitch Pipe
+    <h1>Pitch Pipe</h1>
   </header>
+  <div class="container">
+    <div class="circle center" id="pitch-pipe">
+      <div class="center">
+
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
