--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -24,9 +24,34 @@
                     cancel : function () {
                         console.log("cancel : ", this);
                     },
-                    /*format : function (value) {
-                        return value + '%';
-                    },*/
+                    format : function (value) {
+                        if(value==1) {
+                          return 'C#'
+                        } else if(value==2) {
+                          return 'D'
+                        } else if(value==3) {
+                          return 'D#'
+                        } else if(value==4) {
+                          return 'E'
+                        } else if(value==5) {
+                          return 'F'
+                        } else if(value==6) {
+                          return 'F#'
+                        } else if(value==7) {
+                          return 'G'
+                        } else if(value==8) {
+                          return 'G#'
+                        } else if(value==9) {
+                          return 'A'
+                        } else if(value==10) {
+                          return 'A#'
+                        } else if(value==11) {
+                          return 'B'
+                        } else {
+                          return 'C'
+                        }
+
+                    },
                     draw : function () {
 
                         // "tron" case
@@ -121,7 +146,7 @@
           </svg>
         </div>
         <div class="selector">
-          <input class="knob" data-width="200" data-cursor=true data-fgColor="#222222" data-thickness=.3 value="1" data-max="11">
+          <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#ffec03" data-thickness=.2 value="1" data-max="12">
         </div>
       </div>
     </div>
