--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -36,7 +36,7 @@
       </svg>
 
     <div id="selector">
-      <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12">
+      <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" disabled>
     </div>
 
   </div>
