--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
         <script src="js/jquery.knob.js"></script>
         <script src="js/script.js"></script>
@@ -28,8 +28,56 @@
         <g>
           <use xlink:href="#circlePath" fill="none"/>
           <text fill="#fff">
-            <textPath xlink:href="#circlePath" style="word-spacing: 29.5;">
-              A A# B C C# D D# E F F# G G#
+            <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="0%" style="word-spacing: -17;">
+              _ A
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="6%">
+              B
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="7.8%"class="flat">
+              &#x266d;
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="15%">
+              B
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="23.5%">
+              C
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="31%">
+              C
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="33%" class="sharp">
+              &#x266f;
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="40%">
+              D
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="47.4%">
+              D
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="49.8%" class="sharp">
+              &#x266f;
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="57%">
+              E
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="65.5%">
+              F
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="72.8%">
+              F
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="74.5%" class="sharp">
+              &#x266f;
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="82%">
+              G
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="89.5%">
+              G
+            </textPath>
+            <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
+              &#x266f;
             </textPath>
           </text>
         </g>
@@ -40,7 +88,9 @@
     </div>
 
   </div>
-
+  <footer>
+    Stuff should go here.
+  </footer>
 </body>
 
 </html>
