--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -84,12 +84,13 @@
       </svg>
 
     <div id="selector">
-      <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" disabled>
+      <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
     </div>
+
+    <div id="output">A</div>
 
   </div>
   <footer>
-    Stuff should go here.
   </footer>
 </body>
 
