--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -17,79 +17,88 @@
   <header>
     <h1>Pitch Pipe</h1>
   </header>
+
   <div class="container">
 
     <div id="pitch-pipe">
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-        <defs>
-          <path id="circlePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
-        </defs>
-        <circle cx="150" cy="150" r="150" fill="#4A4A4A"/>
-        <g>
-          <use xlink:href="#circlePath" fill="none"/>
-          <text fill="#fff">
-            <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="100%" style="word-spacing: -17;">
-              A
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="6%">
-              B
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="7.8%"class="flat">
-              &#x266d;
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="15%">
-              B
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="23.5%">
-              C
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="31%">
-              C
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="33%" class="sharp">
-              &#x266f;
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="40%">
-              D
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="47.6%">
-              D
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="50%" class="sharp">
-              &#x266f;
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="57%">
-              E
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="65.5%">
-              F
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="72.8%">
-              F
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="74.5%" class="sharp">
-              &#x266f;
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="82%">
-              G
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="89.5%">
-              G
-            </textPath>
-            <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
-              &#x266f;
-            </textPath>
-          </text>
-        </g>
-      </svg>
 
-    <div id="selector">
-      <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
+      <div id="pitch-pipe-svg">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+          <defs>
+            <path id="circlePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
+          </defs>
+          <circle cx="150" cy="150" r="150" fill="#4A4A4A"/>
+          <g>
+            <use xlink:href="#circlePath" fill="none"/>
+            <text fill="#fff">
+              <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="100%" style="word-spacing: -17;">
+                A
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="6%">
+                B
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="7.8%"class="flat">
+                &#x266d;
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="15%">
+                B
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="23.5%">
+                C
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="31%">
+                C
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="33%" class="sharp">
+                &#x266f;
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="40%">
+                D
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="47.6%">
+                D
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="50%" class="sharp">
+                &#x266f;
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="57%">
+                E
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="65.5%">
+                F
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="72.8%">
+                F
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="74.5%" class="sharp">
+                &#x266f;
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="82%">
+                G
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="89.5%">
+                G
+              </textPath>
+              <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
+                &#x266f;
+              </textPath>
+            </text>
+          </g>
+        </svg>
+      </div>
+
+      <div id="selector">
+        <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
+      </div>
+
+      <div id="output-circle">
+        <div id="output">A</div>
+      </div>
+
     </div>
 
-    <div id="output">A</div>
-
   </div>
+
   <footer>
   </footer>
 </body>
