--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -96,12 +96,7 @@
 
     </div>
     <footer>
-      <ul>
-
-        <li><h2>Buy the App</h2></li>
-        <li><h2>Support Pitch Pipe</h2></li>
-
-      </ul>
+        Buy the App
     </footer>
   </div>
 
