--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -87,7 +87,7 @@
       </div>
 
       <div id="selector">
-        <input class="knob" data-displayPrevious=true data-lincap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
+        <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
       </div>
 
       <div id="output-circle">
