--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -98,7 +98,15 @@
 
     </div>
     <footer>
-        Buy me a coffee!
+
+        <div id="donate">
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="2DARQ5M7627EC">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
     </footer>
   </div>
 
