--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
         <script src="js/jquery.knob.js"></script>
@@ -109,6 +109,55 @@
         </div>
     </footer>
   </div>
+
+  <audio id="1" preload="auto">
+      <source src="sounds/1.mp3"></source>
+      <source src="sounds/1.ogg"></source>
+  </audio>
+  <audio id="2" preload="auto">
+      <source src="sounds/2.mp3"></source>
+      <source src="sounds/2.ogg"></source>
+  </audio>
+  <audio id="3" preload="auto">
+      <source src="sounds/3.mp3"></source>
+      <source src="sounds/3.ogg"></source>
+  </audio>
+  <audio id="4" preload="auto">
+      <source src="sounds/4.mp3"></source>
+      <source src="sounds/4.ogg"></source>
+  </audio>
+  <audio id="5" preload="auto">
+      <source src="sounds/5.mp3"></source>
+      <source src="sounds/5.ogg"></source>
+  </audio>
+  <audio id="6" preload="auto">
+      <source src="sounds/6.mp3"></source>
+      <source src="sounds/6.ogg"></source>
+  </audio>
+  <audio id="7" preload="auto">
+      <source src="sounds/7.mp3"></source>
+      <source src="sounds/7.ogg"></source>
+  </audio>
+  <audio id="8" preload="auto">
+      <source src="sounds/8.mp3"></source>
+      <source src="sounds/8.ogg"></source>
+  </audio>
+  <audio id="9" preload="auto">
+      <source src="sounds/9.mp3"></source>
+      <source src="sounds/9.ogg"></source>
+  </audio>
+  <audio id="10" preload="auto">
+      <source src="sounds/10.mp3"></source>
+      <source src="sounds/10.ogg"></source>
+  </audio>
+  <audio id="11" preload="auto">
+      <source src="sounds/11.mp3"></source>
+      <source src="sounds/11.ogg"></source>
+  </audio>
+  <audio id="12" preload="auto">
+      <source src="sounds/12.mp3"></source>
+      <source src="sounds/12.ogg"></source>
+  </audio>
 
 </body>
 
