Add sounds, some index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
 
   <header>
-    <h1>I'm Louis Cruz</h1>
+    <h1>Louis Cruz</h1>
   </header>
+
+  <div>
+    <a href="pitchpipe.html">Pitch Pipe</a>
+  </div>
+
+  <footer>
+  </footer>
+
 </html>
