--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -110,51 +110,51 @@
     </footer>
   </div>
 
-  <audio id="1" preload="auto">
+  <audio id="A" preload="auto">
       <source src="sounds/1.mp3"></source>
       <source src="sounds/1.ogg"></source>
   </audio>
-  <audio id="2" preload="auto">
+  <audio id="Bf" preload="auto">
       <source src="sounds/2.mp3"></source>
       <source src="sounds/2.ogg"></source>
   </audio>
-  <audio id="3" preload="auto">
+  <audio id="B" preload="auto">
       <source src="sounds/3.mp3"></source>
       <source src="sounds/3.ogg"></source>
   </audio>
-  <audio id="4" preload="auto">
+  <audio id="C" preload="auto">
       <source src="sounds/4.mp3"></source>
       <source src="sounds/4.ogg"></source>
   </audio>
-  <audio id="5" preload="auto">
+  <audio id="Cs" preload="auto">
       <source src="sounds/5.mp3"></source>
       <source src="sounds/5.ogg"></source>
   </audio>
-  <audio id="6" preload="auto">
+  <audio id="D" preload="auto">
       <source src="sounds/6.mp3"></source>
       <source src="sounds/6.ogg"></source>
   </audio>
-  <audio id="7" preload="auto">
+  <audio id="Ds" preload="auto">
       <source src="sounds/7.mp3"></source>
       <source src="sounds/7.ogg"></source>
   </audio>
-  <audio id="8" preload="auto">
+  <audio id="E" preload="auto">
       <source src="sounds/8.mp3"></source>
       <source src="sounds/8.ogg"></source>
   </audio>
-  <audio id="9" preload="auto">
+  <audio id="F" preload="auto">
       <source src="sounds/9.mp3"></source>
       <source src="sounds/9.ogg"></source>
   </audio>
-  <audio id="10" preload="auto">
+  <audio id="Fs" preload="auto">
       <source src="sounds/10.mp3"></source>
       <source src="sounds/10.ogg"></source>
   </audio>
-  <audio id="11" preload="auto">
+  <audio id="G" preload="auto">
       <source src="sounds/11.mp3"></source>
       <source src="sounds/11.ogg"></source>
   </audio>
-  <audio id="12" preload="auto">
+  <audio id="G#" preload="auto">
       <source src="sounds/12.mp3"></source>
       <source src="sounds/12.ogg"></source>
   </audio>
