--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -111,52 +111,52 @@
   </div>
 
   <audio id="A" preload="auto">
-      <source src="sounds/1.mp3"></source>
-      <source src="sounds/1.ogg"></source>
+      <source src="sounds/A.mp3"></source>
+      <source src="sounds/A.ogg"></source>
   </audio>
   <audio id="Bf" preload="auto">
-      <source src="sounds/2.mp3"></source>
-      <source src="sounds/2.ogg"></source>
+      <source src="sounds/Bf.mp3"></source>
+      <source src="sounds/Bf.ogg"></source>
   </audio>
   <audio id="B" preload="auto">
-      <source src="sounds/3.mp3"></source>
-      <source src="sounds/3.ogg"></source>
+      <source src="sounds/B.mp3"></source>
+      <source src="sounds/B.ogg"></source>
   </audio>
   <audio id="C" preload="auto">
-      <source src="sounds/4.mp3"></source>
-      <source src="sounds/4.ogg"></source>
+      <source src="sounds/C.mp3"></source>
+      <source src="sounds/C.ogg"></source>
   </audio>
   <audio id="Cs" preload="auto">
-      <source src="sounds/5.mp3"></source>
-      <source src="sounds/5.ogg"></source>
+      <source src="sounds/Cs.mp3"></source>
+      <source src="sounds/Cs.ogg"></source>
   </audio>
   <audio id="D" preload="auto">
-      <source src="sounds/6.mp3"></source>
-      <source src="sounds/6.ogg"></source>
+      <source src="sounds/D.mp3"></source>
+      <source src="sounds/D.ogg"></source>
   </audio>
   <audio id="Ds" preload="auto">
-      <source src="sounds/7.mp3"></source>
-      <source src="sounds/7.ogg"></source>
+      <source src="sounds/Ds.mp3"></source>
+      <source src="sounds/Ds.ogg"></source>
   </audio>
   <audio id="E" preload="auto">
-      <source src="sounds/8.mp3"></source>
-      <source src="sounds/8.ogg"></source>
+      <source src="sounds/E.mp3"></source>
+      <source src="sounds/E.ogg"></source>
   </audio>
   <audio id="F" preload="auto">
-      <source src="sounds/9.mp3"></source>
-      <source src="sounds/9.ogg"></source>
+      <source src="sounds/F.mp3"></source>
+      <source src="sounds/F.ogg"></source>
   </audio>
   <audio id="Fs" preload="auto">
-      <source src="sounds/10.mp3"></source>
-      <source src="sounds/10.ogg"></source>
+      <source src="sounds/Fs.mp3"></source>
+      <source src="sounds/Fs.ogg"></source>
   </audio>
   <audio id="G" preload="auto">
-      <source src="sounds/11.mp3"></source>
-      <source src="sounds/11.ogg"></source>
+      <source src="sounds/G.mp3"></source>
+      <source src="sounds/G.ogg"></source>
   </audio>
-  <audio id="G#" preload="auto">
-      <source src="sounds/12.mp3"></source>
-      <source src="sounds/12.ogg"></source>
+  <audio id="Gs" preload="auto">
+      <source src="sounds/Gs.mp3"></source>
+      <source src="sounds/Gs.ogg"></source>
   </audio>
 
 </body>
