Add fixed width

--- a/pitchpipetest.html
+++ b/pitchpipetest.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>The Pitch Pipe</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="css/styletest.css">
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
