--- a/pitchpipetest.html
+++ b/pitchpipetest.html
@@ -17,9 +17,11 @@
     <div class="middle">
       <div class="inner">
 
-        <header>
-          Pitch Pipe
-        </header>
+
+          <header>
+            Pitch<br>Pipe
+          </header>
+
 
         <div id="pitch-pipe">
 
@@ -106,5 +108,54 @@
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
   <script src="js/jquery.knob.js"></script>
   <script src="js/script.js"></script>
+
+  <audio id="A" preload="auto">
+      <source src="sounds/A.mp3"></source>
+      <source src="sounds/A.ogg"></source>
+  </audio>
+  <audio id="Bf" preload="auto">
+      <source src="sounds/Bf.mp3"></source>
+      <source src="sounds/Bf.ogg"></source>
+  </audio>
+  <audio id="B" preload="auto">
+      <source src="sounds/B.mp3"></source>
+      <source src="sounds/B.ogg"></source>
+  </audio>
+  <audio id="C" preload="auto">
+      <source src="sounds/C.mp3"></source>
+      <source src="sounds/C.ogg"></source>
+  </audio>
+  <audio id="Cs" preload="auto">
+      <source src="sounds/Cs.mp3"></source>
+      <source src="sounds/Cs.ogg"></source>
+  </audio>
+  <audio id="D" preload="auto">
+      <source src="sounds/D.mp3"></source>
+      <source src="sounds/D.ogg"></source>
+  </audio>
+  <audio id="Ds" preload="auto">
+      <source src="sounds/Ds.mp3"></source>
+      <source src="sounds/Ds.ogg"></source>
+  </audio>
+  <audio id="E" preload="auto">
+      <source src="sounds/E.mp3"></source>
+      <source src="sounds/E.ogg"></source>
+  </audio>
+  <audio id="F" preload="auto">
+      <source src="sounds/F.mp3"></source>
+      <source src="sounds/F.ogg"></source>
+  </audio>
+  <audio id="Fs" preload="auto">
+      <source src="sounds/Fs.mp3"></source>
+      <source src="sounds/Fs.ogg"></source>
+  </audio>
+  <audio id="G" preload="auto">
+      <source src="sounds/G.mp3"></source>
+      <source src="sounds/G.ogg"></source>
+  </audio>
+  <audio id="Gs" preload="auto">
+      <source src="sounds/Gs.mp3"></source>
+      <source src="sounds/Gs.ogg"></source>
+  </audio>
 
 </body>
