--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -2,114 +2,110 @@
 <html>
 
 <head>
-  <title>Pitch Pipe</title>
+  <title>The Pitch Pipe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/responsive.css">
+  <meta name="HandheldFriendly" content="true" />
+  <link rel="stylesheet" type="text/css" href="css/styletest.css">
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
-        <script src="js/jquery.knob.js"></script>
-        <script src="js/script.js"></script>
+
 </head>
 
 <body>
 
-  <div class="container">
+  <div class="outer">
+    <div class="middle">
+      <div class="inner">
 
-    <header>
-      <h1>Pitch Pipe</h1>
-    </header>
+        <header>
+          Pitch<br>Pipe
+        </header>
 
-    <div id="pitch-pipe">
+        <div id="pitch-pipe">
 
-      <div id="pitch-pipe-svg">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
-          <defs>
-            <path id="circlePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
-          </defs>
-          <circle id="svg-circle" cx="150" cy="150" r="150"/>
-          <g>
-            <use xlink:href="#circlePath" fill="none"/>
-            <text fill="#fff">
-              <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="100%" style="word-spacing: -17;">
-                A
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="6%">
-                B
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="7.8%"class="flat">
-                &#x266d;
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="15%">
-                B
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="23.5%">
-                C
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="31%">
-                C
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="33%" class="sharp">
-                &#x266f;
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="40%">
-                D
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="47.6%">
-                D
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="50%" class="sharp">
-                &#x266f;
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="57%">
-                E
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="65.5%">
-                F
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="72.8%">
-                F
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="74.5%" class="sharp">
-                &#x266f;
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="82%">
-                G
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="89.5%">
-                G
-              </textPath>
-              <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
-                &#x266f;
-              </textPath>
-            </text>
-          </g>
-        </svg>
-      </div>
+          <div id="pitch-pipe-svg">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+              <defs>
+                <path id="circlePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
+              </defs>
+              <circle id="svg-circle" cx="150" cy="150" r="150"/>
+              <g>
+                <use xlink:href="#circlePath" fill="none"/>
+                <text fill="#fff">
+                  <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="100%" style="word-spacing: -17;">
+                    A
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="6%">
+                    B
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="7.8%"class="flat">
+                    &#x266d;
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="15%">
+                    B
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="23.5%">
+                    C
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="31%">
+                    C
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="33%" class="sharp">
+                    &#x266f;
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="40%">
+                    D
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="47.6%">
+                    D
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="50%" class="sharp">
+                    &#x266f;
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="57%">
+                      E
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="65.5%">
+                    F
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="72.8%">
+                    F
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="74.5%" class="sharp">
+                    &#x266f;
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="82%">
+                    G
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="89.5%">
+                    G
+                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
+                    &#x266f;
+                  </textPath>
+                </text>
+              </g>
+            </svg>
+          </div>
 
-      <div id="selector">
-        <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
-      </div>
+          <div id="selector">
+            <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
+          </div>
 
-      <div id="output-circle">
-        <div id="output">A</div>
-      </div>
+          <div id="output-circle">
+            <div id="output"></div>
+          </div>
 
-    </div>
-    <footer>
-
-        <div id="donate">
-          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="2DARQ5M7627EC">
-            Donate!
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-          </form>
         </div>
-    </footer>
-  </div>
+
+      </div> <!--End inner-->
+    </div> <!--End middle-->
+  </div> <!-- End outer-->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
+  <script src="js/jquery.knob.js"></script>
+  <script src="js/script.js"></script>
 
   <audio id="A" preload="auto">
       <source src="sounds/A.mp3"></source>
@@ -161,5 +157,3 @@
   </audio>
 
 </body>
-
-</html>
