--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -5,7 +5,7 @@
   <title>The Pitch Pipe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="HandheldFriendly" content="true" />
-  <link rel="stylesheet" type="text/css" href="css/styletest.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Oleo+Script:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
 
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          Pitch<br>Pipe
+          <b>the</b><br>Pitch<br>Pipe
         </header>
 
         <div id="pitch-pipe">
