--- a/pitchpipe.html
+++ b/pitchpipe.html
@@ -106,7 +106,6 @@
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
   <script src="js/jquery.knob.js"></script>
   <script src="js/script.js"></script>
-  <script src="js/ga.js"></script>
 
   <audio id="A" preload="auto">
       <source src="sounds/A.mp3"></source>
@@ -156,5 +155,16 @@
       <source src="sounds/Gs.mp3"></source>
       <source src="sounds/Gs.ogg"></source>
   </audio>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-52246754-1', 'louisscruz.github.io');
+  ga('send', 'pageview');
+
+  </script>
 
 </body>
