--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
   <script src="js/jquery.knob.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/min/jquery.animate-colors-min.js"></script>
 
   <audio id="A" preload="auto">
       <source src="sounds/A.mp3"></source>
