--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
           </div>
 
           <div id="selector">
-            <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=.2 value="9" data-max="12" style="visibility: hidden;" disabled>
+            <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=".2" value="9" data-max="12" style="visibility: hidden;" disabled>
           </div>
 
-          <div id="output-circle">
+          <div id="output-circle" class="button">
             <div id="output"></div>
           </div>
 
