--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
-  <script src="js/jquery.knob.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/min/jquery.animate-colors-min.js"></script>
+  <script src="js/min/jquery.knob.min.js"></script>
+  <script src="js/min/script.min.js"></script>
 
   <audio id="A" preload="auto">
       <source src="sounds/A.mp3"></source>
