--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 
 <body>
 
-  <script type="text/javascript">
-    ( function() {
-        if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-          var unit = {"calltype":"async[2]","publisher":"louisscruz","width":468,"height":60,"sid":"Chitika Default","color_site_link":"33ad5c","color_text":"4a4a4a","color_bg":"bdbdbd","color_button":"33ad5c","color_button_text":"ffffff"};
-          var placement_id = window.CHITIKA.units.length;
-          window.CHITIKA.units.push(unit);
-          document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-        }());
-  </script>
-  <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+  <div id="ads">
+    <script type="text/javascript">
+      ( function() {
+          if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+            var unit = {"calltype":"async[2]","publisher":"louisscruz","width":468,"height":60,"sid":"Chitika Default","color_site_link":"33ad5c","color_text":"4a4a4a","color_bg":"bdbdbd","color_button":"33ad5c","color_button_text":"ffffff"};
+            var placement_id = window.CHITIKA.units.length;
+            window.CHITIKA.units.push(unit);
+            document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+          }());
+    </script>
+    <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+  </div>
 
   <div class="outer">
     <div class="middle">
