--- a/index.html
+++ b/index.html
@@ -13,21 +13,6 @@
 
 <body>
 
-  <div id="ads">
-
-    <script type="text/javascript">
-      ( function() {
-        if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-        var unit = {"calltype":"async[2]","publisher":"louisscruz","width":468,"height":60,"sid":"Chitika Default"};
-        var placement_id = window.CHITIKA.units.length;
-        window.CHITIKA.units.push(unit);
-        document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-    }());
-    </script>
-    <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
-
-  </div>
-
   <div class="outer">
     <div class="middle">
       <div class="inner">
@@ -181,5 +166,11 @@
     ga('send', 'pageview');
 
   </script>
+
+  <script type="text/javascript">
+    var infolinks_pid = 2135698;
+    var infolinks_wsid = 0;
+  </script>
+  <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 </body>
