--- a/index.html
+++ b/index.html
@@ -102,6 +102,22 @@
     </div> <!--End middle-->
   </div> <!-- End outer-->
 
+  <footer>
+    <form class="pp" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="4U6EYD8FCW7KU">
+      <button name="submit"><img src="img/icon_pp.svg">Donate</button>
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+    <span class="copyright">Copyright &copy; 2014 Louis Cruz</span>
+    <span class="btc">
+        <a href="bitcoin:1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i">
+          Donate BTC<img src="img/icon_bitcoin.svg">
+        </a>
+        <span class="address"><code>1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i</code></span>
+      </span>
+  </footer>
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
   <script src="js/min/jquery.knob.min.js"></script>
