--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
 
-  <div id="twitter">
+  <div id="social">
 
-  <a href="https://twitter.com/share" class="twitter-share-button" data-via="ThePitchPipe">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-via="ThePitchPipe">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
   </div>
 
   <div class="outer">
@@ -188,11 +189,5 @@
     ga('send', 'pageview');
 
   </script>
-
-  <script type="text/javascript">
-    var infolinks_pid = 2135698;
-    var infolinks_wsid = 0;
-  </script>
-  <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 </body>
