Fix white space

--- a/index.html
+++ b/index.html
@@ -34,62 +34,29 @@
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
               <defs>
                 <path id="circlePath" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
+                <path id="circlePath2" d=" M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
               </defs>
               <circle id="svg-circle" cx="150" cy="150" r="150"/>
               <g>
                 <use xlink:href="#circlePath" fill="none"/>
                 <text fill="#fff">
-                  <textPath xlink:href="#circlePath" text-anchor="middle" startOffset="100%" style="word-spacing: -17;">
-                    A
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="6%">
-                    B
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="8%"class="flat">
-                    &#x266d;
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="15%">
-                    B
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="23.5%">
-                    C
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="31%">
-                    C
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="33.5%" class="sharp">
-                    &#x266f;
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="40%">
-                    D
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="47.6%">
-                    D
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="50.5%" class="sharp">
-                    &#x266f;
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="57%">
-                      E
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="65.5%">
-                    F
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="72.8%">
-                    F
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="75%" class="sharp">
-                    &#x266f;
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="82%">
-                    G
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="89.5%">
-                    G
-                  </textPath>
-                  <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">
-                    &#x266f;
-                  </textPath>
+                  <textPath xlink:href="#circlePath" startOffset="0">A</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="6%">B</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="8%"class="flat">&#x266d;</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="15%">B</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="23.5%">C</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="31%">C</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="33.5%" class="sharp">&#x266f;</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="40%">D</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="47.6%">D</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="50.5%" class="sharp">&#x266f;</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="57%">E</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="65.5%">F</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="72.8%">F</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="75%" class="sharp">&#x266f;</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="82%">G</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="89.5%">G</textPath>
+                  <textPath xlink:href="#circlePath" startOffset="92%" class="sharp">&#x266f;</textPath>
                 </text>
               </g>
             </svg>
