Fix selector in FF

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
 
           <div id="selector">
-            <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=".2" value="9" data-max="12" style="visibility: hidden;" disabled>
+            <input class="knob" data-displayPrevious=true data-linecap=round data-cursor=true data-width="100%" data-fgColor="#33AD5C" data-thickness=".2" data-max="12" style="visibility: hidden;" disabled>
           </div>
 
           <div id="output-circle" class="button">
@@ -100,7 +100,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
   <script src="js/min/jquery.knob.min.js"></script>
-  <script src="js/min/script.min.js"></script>
+  <script src="js/script.js"></script>
 
   <audio id="A" preload="auto">
       <source src="sounds/A.mp3"></source>
